syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

// common
import "common/player-data.proto";
import "common/vector2.proto";


message DrawnSpellRequest {
  message Spell {
    common.Vector2 offset = 1;
    repeated common.Vector2 points = 2;
  }

  common.PlayerData playerData = 1;
  int32 sessionId = 2;
  Spell spell = 3;
};
