syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

// common
import "common/player-data.proto";
import "common/vector2.proto";
import "common/spell.proto";


message ProtectionWallRequest {
  enum RequestType {
    ADD_SPELL = 0;
    CLEAR_CANVAS = 1; // no additional data
  };

  common.PlayerData playerData = 1;
  int32 sessionId = 2;
  // ADD_SPELL
  common.Spell spell = 3;
};
